--- a/NR2020/index.html
+++ b/NR2020/index.html
@@ -381,11 +381,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                     			
-                    <h4 class="modal-title">Member Login</h4>	
+                    <h4 class="modal-title">Member Signup</h4>	
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <form action="http://notesready.com/Register_cntrl/insertdata" method="post" id="Signup" enctype="multipart/form-data">                                        <div class="form-group">
+                    <form action="http://notesready.com/Register_cntrl/insertdata" method="post" id="" enctype="multipart/form-data">                                        <div class="form-group">
                         <label class="sr-only" for="">Full Name</label>
                         <input type="text" name="fname" required="required" placeholder="Enter Your Full Name..." class="form-first-name form-control" id="form-first-name">
                     </div>
